# RustOnApacheAirflow

./: Cargo.toml  README.md  airflow_settings.yaml  launch_astro.sh
dags/: rust_test_DAG.py
dags/utils/: rust_airflow_utils.py
src/: main.rs
