[package]
name = "rustWithAirflow"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.1"
aws-sdk-s3 = "0.32.0"
bytes = "1.5.0"
tokio = {version = "1.25.0", features = ["full"]}
